tests/macros/plugin/validate.rs
fn main() {
    let q = requestty::questions![Plugin { validate: todo!() }];
}
